<resources>

    <!--    MyApplication-->
    <string name="app_name">Itransition</string>

    <!--    BottomNavigationView-->
    <string name="item_bottom_navigation_players">Players</string>
    <string name="item_bottom_navigation_games">Games</string>
    <string name="item_bottom_navigation_user">User</string>

    <!--    NbaPlayerViewHolder-->
    <string name="nba_player_name">NBA player: %1$s %2$s</string>
    <string name="nba_player_position">Position: %1$s</string>

    <!--    NbaTeamViewHolder-->
    <string name="nba_team_full_name">Team: %1$s, %2$s</string>
    <string name="nba_team_city">City: %1s</string>

    <!--    NbaDetailsFragment-->
    <string name="nba_details_name">Name: %1$s %2$s</string>
    <string name="nba_details_team">Team: %1$s</string>
    <string name="nba_details_position">Position: %1$s</string>
    <string name="nba_details_height_feet">Height feet: %1$d</string>
    <string name="nba_details_height_inches">Height inches: %1$d</string>
    <string name="nba_details_weight_pounds">Weight pounds: %1$d</string>

    <!--    NbaFragment-->
    <string name="nba_fragment_loading">NbaFragment: Loading</string>
    <string name="nba_fragment_empty">NbaFragment: Empty</string>
    <string name="nba_fragment_error">NbaFragment: Error: %s</string>

    <!--    GamesDetailsFragment-->
    <string name="games_details_home_team">Home team</string>
    <string name="games_details_visitor_team">Visitor team</string>
    <string name="games_details_visitor_team_name">Name: %1$s</string>
    <string name="games_details_home_team_name">Name: %1$s</string>
    <string name="games_details_season">Season: %1$d</string>
    <string name="games_details_date">Date: %1$s</string>
    <string name="games_details_home_team_city">City: %1$s</string>
    <string name="games_details_home_team_division">Division: %1$s</string>
    <string name="games_details_visitor_team_city">City: %1$s</string>
    <string name="games_details_visitor_team_division">Division: %1$s</string>

    <!--    NbaGameViewHolder-->
    <string name="nba_game_season">Season: %1$d</string>
    <string name="nba_game_status">Status: %1$s</string>
    <string name="nba_game_date">Date: %1$s</string>
    <string name="nba_game_home_team_score">Home team score: %1$d</string>

    <!--    NbaGameTeamsViewHolder-->
    <string name="nba_game_home_team">Home team</string>
    <string name="nba_game_visitor_team">Visitor team</string>
    <string name="nba_game_full_name">Full name</string>
    <string name="nba_game_home_team_name">Name: %1$s</string>
    <string name="nba_game_home_team_city">City: %1$s</string>
    <string name="nba_game_home_team_abbreviation">Abbreviation: %1$s</string>
    <string name="nba_game_visitor_team_name">Name: %1$s</string>
    <string name="nba_game_visitor_team_city">City: %1$s</string>
    <string name="nba_game_visitor_team_abbreviation">Abbreviation: %1$s</string>

    <!--    UserProfileFragment-->
    <string name="user_profile_unknown">Unknown</string>
    <string name="user_profile_not_specified">Not Specified</string>
    <string name="user_profile_name_test">John DoeDoeDoeDoeDoeDoe</string>
    <string name="user_profile_date_test">01/01/2001</string>
    <string name="user_profile_loading">UserProfileFragment: Loading</string>
    <string name="user_profile_error">UserProfileFragment:%s</string>

    <!--    EditUserProfileFragment-->
    <string name="edit_user_profile_apply">Apply</string>
    <string name="edit_user_profile_name_hint">Name</string>
    <string name="edit_user_profile_date_hint">Date</string>
    <string name="edit_user_profile_not_specified">Not Specified</string>
    <string name="edit_user_profile_not_valid_date_toast_message">Not valid date</string>
    <string name="edit_user_profile_loading">EditUserProfileFragment: Loading</string>
    <string name="edit_user_profile_error">EditUserProfileFragment:%s</string>
    <string name="edit_user_profile_name_should_contain_at_least_four_characters_error">
        Name should contain at least 4 characters (digits are forbidden)</string>
    <string name="edit_user_profile_please_input_birth_date_error">Please input birth date</string>
    <string name="edit_user_profile_insertion_failed_toast_message">Insertion failed</string>
    <string name="edit_user_profile_close_dialog_title">Warning!</string>
    <string name="edit_user_profile_close_dialog_message">If you close the dialog, you will lose your data</string>
    <string name="edit_user_profile_close_dialog_positive">Cancel</string>
    <string name="edit_user_profile_close_dialog_negative">Close</string>

    <!--    ImagePickerSheetDialogFragment-->
    <string name="image_picker_bottom_sheet_dialog_choose_image_path">CHOOSE IMAGE PATH</string>
    <string name="image_picker_bottom_sheet_dialog_image_from_camera">Image from Camera</string>
    <string name="image_picker_bottom_sheet_dialog_image_from_gallery">Image from Gallery</string>
    <string name="image_picker_bottom_sheet_dialog_new_picture">New Picture</string>
    <string name="image_picker_bottom_sheet_dialog_chosen_image_title">CHOSEN IMAGE</string>
    <string name="image_picker_sheet_dialog_permission_granted">Permission granted</string>
    <string name="image_picker_sheet_dialog_permission_denied">Permission denied</string>

    <!--    ImageCompressionWorker-->
    <string name="image_compression_worker_error_applying_compression">Error applying compression</string>
    <string name="image_compression_worker_invalid_input_uri">Invalid input uri</string>

    <!--    LoginFragment-->
    <string name="login_login_button">Login</string>
    <string name="login_name_hint">Name</string>
    <string name="login_password_hint">Password</string>
    <string name="login_name_error">Name should contain at least 1 character</string>
    <string name="login_password_error">Password should contain at least 6 characters</string>

    <!--    LoginViewModel-->
    <string name="login_login_failed">Login failed</string>
</resources>