<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.nbadetails.NbaDetailsFragment"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_nba_details_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nba_details_name"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_medium" />

    <TextView
        android:id="@+id/tv_nba_details_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nba_details_team"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_medium" />

    <TextView
        android:id="@+id/tv_nba_details_position"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_medium"
        android:text="@string/nba_details_position" />

    <TextView
        android:id="@+id/tv_nba_details_height_feet"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_medium"
        android:text="@string/nba_details_height_feet" />

    <TextView
        android:id="@+id/tv_nba_details_height_inches"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_medium"
        android:text="@string/nba_details_height_inches" />

    <TextView
        android:id="@+id/tv_nba_details_weight_pounds"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_medium"
        android:text="@string/nba_details_weight_pounds" />
</LinearLayout>