<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_bottom_sheet_dialog_image_path"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_image_picker_bottom_sheet_dialog_chosen_image_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/bottom_sheet_dialog_image_path_padding"
        android:text="@string/image_picker_bottom_sheet_dialog_chosen_image_title"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_medium"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/iv_image_picker_bottom_sheet_dialog_chosen_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_user_profile" />

    <TextView
        android:id="@+id/tv_image_picker_bottom_sheet_dialog_choose_image_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/bottom_sheet_dialog_image_path_padding"
        android:text="@string/image_picker_bottom_sheet_dialog_choose_image_path"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_medium" />

    <TextView
        android:id="@+id/tv_image_picker_bottom_sheet_dialog_image_from_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/bottom_sheet_dialog_image_path_padding"
        android:text="@string/image_picker_bottom_sheet_dialog_image_from_camera"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_medium" />

    <TextView
        android:id="@+id/tv_image_picker_bottom_sheet_dialog_image_from_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/bottom_sheet_dialog_image_path_padding"
        android:text="@string/image_picker_bottom_sheet_dialog_image_from_gallery"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_medium" />

</LinearLayout>