<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin_small"
    android:elevation="@dimen/layout_elevation_small">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nba_game_status_adapter_ll_parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_ultra_large"
        android:layout_margin="@dimen/layout_margin_small"
        app:layout_constraintBottom_toBottomOf="@+id/tv_nba_player_last_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_nba_player_last_name">

        <TextView
            android:id="@+id/tv_item_nba_game_teams_home_team_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nba_game_home_team_city"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_nba_game_teams_home_team_abbreviation"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_nba_game_teams_home_team_name"
            app:layout_constraintStart_toStartOf="@+id/tv_item_nba_game_teams_home_team_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_nba_game_teams_home_team_name" />

        <TextView
            android:id="@+id/tv_item_nba_game_home_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_view_margin_bottom_large"
            android:text="@string/nba_game_home_team"
            android:textColor="@color/red"
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_nba_game_teams_home_team_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_nba_game_teams_home_team_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nba_game_home_team_name"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_nba_game_teams_home_team_city"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_nba_game_home_team"
            app:layout_constraintStart_toStartOf="@+id/tv_item_nba_game_home_team"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_nba_game_home_team" />

        <TextView
            android:id="@+id/tv_item_nba_game_teams_home_team_abbreviation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nba_game_home_team_abbreviation"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_nba_game_teams_home_team_full_name"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_nba_game_teams_home_team_city"
            app:layout_constraintStart_toStartOf="@+id/tv_item_nba_game_teams_home_team_city"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_nba_game_teams_home_team_city" />

        <TextView
            android:id="@+id/tv_item_nba_game_teams_home_team_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nba_game_full_name"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_nba_game_teams_home_team_abbreviation"
            app:layout_constraintStart_toStartOf="@+id/tv_item_nba_game_teams_home_team_abbreviation"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_nba_game_teams_home_team_abbreviation" />

        <TextView
            android:id="@+id/tv_item_nba_game_teams_visitor_team_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nba_game_visitor_team_name"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_nba_games_teams_visitor_team_city"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_nba_game_teams_visitor_team"
            app:layout_constraintStart_toStartOf="@+id/tv_item_nba_game_teams_visitor_team"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_nba_game_teams_visitor_team" />

        <TextView
            android:id="@+id/tv_item_nba_games_teams_visitor_team_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nba_game_visitor_team_city"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_nba_game_teams_visitor_team_abbreviation"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_nba_game_teams_visitor_team_name"
            app:layout_constraintStart_toStartOf="@+id/tv_item_nba_game_teams_visitor_team_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_nba_game_teams_visitor_team_name" />

        <TextView
            android:id="@+id/tv_item_nba_game_teams_visitor_team_abbreviation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nba_game_visitor_team_abbreviation"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_nba_game_teams_visitor_team_full_name"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_nba_games_teams_visitor_team_city"
            app:layout_constraintStart_toStartOf="@+id/tv_item_nba_games_teams_visitor_team_city"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_nba_games_teams_visitor_team_city" />

        <TextView
            android:id="@+id/tv_item_nba_game_teams_visitor_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_view_margin_end_large"
            android:text="@string/nba_game_visitor_team"
            android:textColor="@color/red"
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_nba_game_teams_visitor_team_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_nba_game_teams_visitor_team_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nba_game_full_name"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_nba_game_teams_visitor_team_abbreviation"
            app:layout_constraintStart_toStartOf="@+id/tv_item_nba_game_teams_visitor_team_abbreviation"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_nba_game_teams_visitor_team_abbreviation" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>