<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/iv_user_profile_edit_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.userprofile.UserProfileFragment">

    <ImageButton
        android:id="@+id/iv_user_profile_edit_profile_button"
        android:layout_width="@dimen/image_view_user_profile_edit_profile_button_layout_width"
        android:layout_height="@dimen/image_view_user_profile_edit_profile_button_layout_height"
        android:layout_marginStart="@dimen/image_view_user_profile_edit_profile_button_margin_start"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@+id/iv_user_profile_user_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_user_profile_user_image"
        app:layout_constraintTop_toTopOf="@+id/iv_user_profile_user_image"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_user_profile_user_image"
        android:layout_width="@dimen/image_view_user_profile_user_image_layout_width"
        android:layout_height="@dimen/image_view_user_profile_user_image_layout_height"
        android:layout_marginStart="@dimen/margin_start_medium"
        android:layout_marginTop="@dimen/margin_top_medium"
        android:padding="@dimen/image_view_user_profile_user_image_padding"
        android:src="@drawable/ic_user_profile"
        app:contentPadding="@dimen/image_view_user_profile_user_image_content_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Theme.Itransition.CornerSize50Percent"
        app:strokeColor="@android:color/black"
        app:strokeWidth="@dimen/image_view_user_profile_user_image_stroke_width" />

    <TextView
        android:id="@+id/tv_user_profile_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_large"
        android:layout_marginEnd="@dimen/margin_end_large"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/user_profile_unknown"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_medium"
        app:layout_constraintBottom_toBottomOf="@+id/iv_user_profile_user_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_user_profile_user_image"
        app:layout_constraintTop_toTopOf="@+id/iv_user_profile_user_image"
        tools:text="@string/user_profile_name_test" />

    <TextView
        android:id="@+id/tv_user_profile_birth_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/user_profile_not_specified"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_medium"
        app:layout_constraintEnd_toStartOf="@+id/iv_user_profile_edit_profile_button"
        app:layout_constraintStart_toStartOf="@+id/tv_user_profile_user_name"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_profile_user_image"
        tools:text="@string/user_profile_date_test" />

</androidx.constraintlayout.widget.ConstraintLayout>