<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.edituserprofile.EditUserProfileFragment">

    <Button
        android:id="@+id/btn_edit_user_profile_apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_large"
        android:layout_marginEnd="@dimen/margin_end_large"
        android:layout_marginBottom="@dimen/margin_bottom_large"

        android:text="@string/edit_user_profile_apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_user_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_large"
        android:layout_marginTop="@dimen/margin_top_large"
        android:layout_marginEnd="@dimen/margin_end_large"
        app:boxBackgroundColor="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_edit_user_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_user_profile_name_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_edit_user_profile_user_image"
        android:layout_width="@dimen/image_view_user_profile_user_image_layout_width"
        android:layout_height="@dimen/image_view_user_profile_user_image_layout_height"
        android:layout_marginStart="@dimen/margin_start_large"
        android:layout_marginTop="@dimen/margin_top_large"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/image_view_user_profile_user_image_padding"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_user_profile"
        app:contentPadding="@dimen/image_view_user_profile_user_image_content_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_edit_user_profile_name"
        app:shapeAppearanceOverlay="@style/Theme.Itransition.CornerSize50Percent"
        app:strokeColor="@android:color/black"
        app:strokeWidth="@dimen/image_view_user_profile_user_image_stroke_width" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_user_profile_date_chooser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_large"
        android:layout_marginEnd="@dimen/margin_end_large"
        app:boxBackgroundColor="@null"
        app:layout_constraintBottom_toBottomOf="@+id/iv_edit_user_profile_user_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_edit_user_profile_user_image"
        app:layout_constraintTop_toTopOf="@+id/iv_edit_user_profile_user_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_edit_user_profile_date_chooser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/edit_user_profile_date_hint"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>